crates/test-ui/ui/msg_send_unwrap.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_unwrap.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![cls, new].unwrap() };
  |                                                              ^^^^^^ cannot infer type
